--- a/css/styles.css
+++ b/css/styles.css
@@ -110,10 +110,22 @@ img {
   letter-spacing: 0.02em;
 }
 .nav-link {
+  position: relative;
   color: var(--secondary-text-color);
 }
 .nav-link.current {
   color: var(--accent-color);
+}
+.nav-link.current::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: var(--accent-color);
+  border-radius: 2px;
 }
 .nav-list {
   display: flex;
