services section update

--- a/css/styles.css
+++ b/css/styles.css
@@ -267,10 +267,28 @@ img {
   margin-bottom: 50px;
 }
 .services-item {
+  position: relative;
   margin-right: 30px;
 }
 .services-item:last-child {
   margin-right: 0;
+}
+.service-text {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--third-color);
+  background-color: rgba(47, 48, 58, 0.8);
 }
 /* Наша команда */
 .team {
