--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ img {
 .services-item:last-child {
   margin-right: 0;
 }
-.service-text {
+.service-description {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -551,6 +551,8 @@ img {
 .gallery-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.gallery-description {
 }
 .gallery-title {
   margin-bottom: 4px;
