--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@
   --hero-btn-hover: #188ce8;
   --gallery-item-border: #eeeeee;
   --main-icon-color: #afb1b8;
+  --modal-backdrop: rgba(0, 0, 0, 0.2);
+  --modal-btn-bg: rgba(0, 0, 0, 0.1);
 }
 
 body {
@@ -202,17 +204,62 @@ img {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  border-radius: 4px;
   letter-spacing: 0.06em;
   color: var(--third-color);
   background-color: var(--accent-color);
+  border: none;
+  border-radius: 4px;
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:hover,
 .hero-btn:focus {
   color: var(--third-color);
   background-color: var(--hero-btn-hover);
 }
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--modal-backdrop);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 5;
+}
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  bottom: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  background-color: var(--main-bg-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
 
+.btn-modal {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  background: var(--main-bg-color);
+  border: 1px solid var(--modal-btn-bg);
+  border-radius: 50%;
+  cursor: pointer;
+}
 /* Особености */ /* Чем мы занимаемся */
 .features-list,
 .services-list {
@@ -552,7 +599,31 @@ img {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+.gallery-img-box {
+  position: relative;
+  overflow: hidden;
+}
 .gallery-description {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  padding: 63px 24px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--third-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.gallery-link:hover .gallery-description,
+.gallery-link:focus .gallery-description {
+  transform: translateY(0);
 }
 .gallery-title {
   margin-bottom: 4px;
