--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   max-width: 1600px;
-  height: 600px;
+  max-height: 600px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -209,7 +209,7 @@ img {
   background-color: var(--accent-color);
   border: none;
   border-radius: 4px;
-  transition-property: color, background-color;
+  transition-property: background;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -226,7 +226,7 @@ img {
   height: 100%;
   background-color: var(--modal-backdrop);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 5;
+  z-index: 2;
 }
 .backdrop.is-hidden {
   visibility: hidden;
@@ -237,7 +237,7 @@ img {
   position: absolute;
   top: 50%;
   bottom: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1.1);
   width: 528px;
   height: 581px;
   background-color: var(--main-bg-color);
