--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,7 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link {
   position: relative;
@@ -236,7 +237,7 @@ img {
 .modal {
   position: absolute;
   top: 50%;
-  bottom: 50%;
+  left: 50%;
   transform: translate(-50%, -50%) scale(1.1);
   width: 528px;
   height: 581px;
@@ -403,6 +404,7 @@ img {
   border-radius: 50%;
   align-items: center;
   justify-content: center;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social-link:hover,
 .team-social-link:focus {
@@ -435,6 +437,7 @@ img {
   justify-content: center;
   fill: var(--main-icon-color);
   border-radius: 4px;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover,
 .clients-link:focus {
@@ -484,6 +487,7 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:last-child {
   margin-bottom: 0;
@@ -521,6 +525,7 @@ img {
   align-items: center;
   justify-content: center;
   background: rgba(255, 255, 255, 0.1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .join-link:hover,
 .join-link:focus {
@@ -563,6 +568,7 @@ img {
   background-color: var(--secondary-bg-color);
   border: none;
   border-radius: 4px;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-text.current,
@@ -617,9 +623,7 @@ img {
   color: var(--third-color);
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
-  transition-property: transform;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .gallery-link:hover .gallery-description,
 .gallery-link:focus .gallery-description {
